--- a/CondominioApp/app/src/main/AndroidManifest.xml
+++ b/CondominioApp/app/src/main/AndroidManifest.xml
@@ -22,8 +22,15 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".Activitys.MainActivity"
-            android:label="Home"></activity>
+        <activity
+            android:name=".Activitys.MainActivity"
+            android:label="Home" />
+        <activity android:name=".Activitys.DetalhesActivity"
+            >
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Activitys.MainActivity"
+                />
+        </activity>
     </application>
 
 </manifest>
