tela novo chamado

--- a/CondominioApp/app/src/main/AndroidManifest.xml
+++ b/CondominioApp/app/src/main/AndroidManifest.xml
@@ -30,7 +30,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activitys.MainActivity" />
         </activity>
-        <activity android:name=".Activitys.NovoChamadoActivity"></activity>
+        <activity android:name=".Activitys.NovoChamadoActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Activitys.MainActivity" />
+        </activity>
+
     </application>
 
 </manifest>
