menu lateral, logout..

--- a/CondominioApp/app/src/main/AndroidManifest.xml
+++ b/CondominioApp/app/src/main/AndroidManifest.xml
@@ -35,7 +35,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activitys.MainActivity" />
         </activity>
-
+        <activity android:name=".Activitys.SobreActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Activitys.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
